added coref mentions information to Document, added implicit conversions from Sista values to rex equivalents ; added SBT_OPTS suggestion